--- a/packages/store-preview/index.html
+++ b/packages/store-preview/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS1</title>
+    <title>多店装修预览</title>
+    <script type="module" src="./dist/index.umd.js"></script>
+    <link rel="stylesheet" type="text/css" href="./dist//bundle.css" />
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
